# fitmodel

./: README  README.md  configure.ac  eigen.c  eigen.h  eigenmb.c  eigenmb.h  free.c  lk.c  main.c  optimiz.c  optimiz.h  options.c  options.h  utilities.h
example/: p1.nxs_fitmodel_stats  p1.nxs_fitmodel_tree  p1.nxs_trees_w1  p1.nxs_trees_w2  p1.nxs_trees_w3  p1.nxs_trees_wbest  p1.tree  param  tree.ps
src/: Makefile.am  Makefile.in  README  config.h.in  configure  draw.c  draw.h  free.h  lk.h  main.c  models.c  models.h  utilities.c
